force-app/main/default/objects/FT_Resend_Settings__mdt/FT_Resend_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Metadata-driven configuration for inbound email resend processing and SFMC integration.</description>
    <label>Resend Settings</label>
    <pluralLabel>Resend Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>