force-app/main/default/objects/FT_Resend_Settings__mdt/fields/Agent_Invoke_Path__c.field-meta.xml
<CustomField>
    <fullName>Agent_Invoke_Path__c</fullName>
    <label>Agent Invoke Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>