force-app/main/default/objects/FT_Resend_Settings__mdt/fields/Agent_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Agent_Named_Credential__c</fullName>
    <label>Agent Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>