force-app/main/default/objects/FT_Resend_Settings__mdt/fields/Alternate_Resend_Path__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Resend_Path__c</fullName>
    <label>Alternate Resend Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>