force-app/main/default/objects/FT_Resend_Settings__mdt/fields/Confirmation_Number_Regex__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number_Regex__c</fullName>
    <label>Confirmation Number Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>