force-app/main/default/objects/FT_Resend_Settings__mdt/fields/Request_Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Request_Timeout_Ms__c</fullName>
    <label>Request Timeout Ms</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>