force-app/main/default/objects/FT_Resend_Settings__mdt/fields/Send_All_Path__c.field-meta.xml
<CustomField>
    <fullName>Send_All_Path__c</fullName>
    <label>Send All Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>