force-app/main/default/objects/FT_Resend_Settings__mdt/fields/SFMC_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Named_Credential__c</fullName>
    <label>SFMC Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>