force-app/main/default/objects/FT_Resend_Settings__mdt/fields/Standard_Resend_Path__c.field-meta.xml
<CustomField>
    <fullName>Standard_Resend_Path__c</fullName>
    <label>Standard Resend Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>