force-app/main/default/objects/FT_Resend_Settings__mdt/fields/Supported_Inbound_Address_Regex__c.field-meta.xml
<CustomField>
    <fullName>Supported_Inbound_Address_Regex__c</fullName>
    <label>Supported Inbound Address Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>